update the remaining files

--- a/test.html
+++ b/test.html
@@ -12,11 +12,17 @@
 
 <p>
     <!-- create the directory of git -->
-    git init  
+    git init  <br>
     <!-- add origin of url -->
-    git remote add origin <--- link-url --->
+    git remote add origin <--- link-url ---> <br>
     <!-- check the url is fine or not -->
-    git remote -v
+    git remote -v <br>
+    <!-- add all files and folders -->
+    git add .  <br>
+    <!-- commit your program files changes with comments -->
+    git commit -m "your comment changes"  <br>
+    <!-- push into the branch -->
+    git push origin [Branch Name]
 </p>
 
 
